<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="5"
    android:useDefaultMargins="true">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:onClick="openListActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/general_margin"
            android:src="@drawable/nougat" />

        <TextView
            android:layout_width="@dimen/text_zone"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="@string/list_project_text" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:onClick="openNetworkActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/kitkat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/network_project_text" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal|fill_vertical"
        android:layout_row="1"
        android:layout_rowSpan="2"
        android:onClick="openCustomActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/general_margin"
            android:src="@drawable/lollipop" />

        <TextView
            android:layout_width="@dimen/text_zone"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="@string/view_project_text" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:onClick="openMapActivity">

        <ImageView
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_marginLeft="@dimen/general_margin"
            android:src="@drawable/ic_map" />

        <TextView
            android:layout_width="@dimen/text_zone"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="@string/map_project_text" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:onClick="openPDF">

        <ImageView
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_marginLeft="@dimen/general_margin"
            android:src="@drawable/jellybean" />

        <TextView
            android:layout_width="@dimen/text_zone"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="@string/pdf_project_text" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:onClick="openSettings">

        <ImageView

            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_marginLeft="@dimen/general_margin"
            android:src="@drawable/ic_setting" />

        <TextView
            android:layout_width="@dimen/text_zone"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="@string/app_project_text" />
    </android.support.v7.widget.CardView>

</GridLayout>